[metadata]
name = bpq
author = Mathew Woodyard
maintainer = Mathew Woodyard
version = attr: bpq.__version__
url = https://github.com/badpacketsllc/bpq/
description = Tools that help you interact with the Bad Packets Cyber Threat Intelligence API.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
keywords = api, cti, sdk
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: Linux

[options]
python_requires = >=3.6
packages = find:

[options.entry_points]
console_scripts =
    bpq = bpq.cli:main
